# moc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  NOTICE  Readme.md  Version.sh  build.sh  check_recipe.sh  clean_recipe.sh  conandata.yml  conanfile.py  environment.sh  install_conan_local.sh  test.sh  ubuntuSetup.sh
doc/: DataModel.md  Design.md  Intro.md  Template.md
examples/sample/: sample.moc  sample.tpl
foo/: DataModelForSample.txt
foo/include/bizobj/address/: Address.h
foo/include/bizobj/country/: Country.h
foo/include/bizobj/creditcard/: CreditCard.h
foo/include/bizobj/customer/: Customer.h
foo/include/bizobj/item/: Item.h
foo/include/bizobj/product/: Product.h
foo/include/bizobj/purchaseorder/: PurchaseOrder.h
foo/include/bizobj/purchaseorderentry/: PurchaseOrderEntry.h
foo/src/bizobj/address/: Address.cpp  Address.ddl.sample
foo/src/bizobj/country/: Country.cpp  Country.ddl.sample
foo/src/bizobj/creditcard/: CreditCard.cpp  CreditCard.ddl.sample
foo/src/bizobj/customer/: Customer.cpp  Customer.ddl.sample
foo/src/bizobj/item/: Item.cpp  Item.ddl.sample
foo/src/bizobj/product/: Product.cpp  Product.ddl.sample
foo/src/bizobj/purchaseorder/: PurchaseOrder.cpp  PurchaseOrder.ddl.sample
foo/src/bizobj/purchaseorderentry/: PurchaseOrderEntry.cpp  PurchaseOrderEntry.ddl.sample
moc/: CMakeLists.txt  CONTROL.y  CONTROLParser.l  IF.y  IFParser.l  Input.C  Input.cpp  Input.h  MOC.h  MOC.y  MOCInternal.h  MOCParser.l  Output.cpp  Output.h  Version.cpp  Version.cpp.in  Version.h  copyrite.tmp  main.C  main.cpp  moc-config.cmake
moc/cmake-modules/: BisonFlex.cmake  Moc.cmake
test_app/: CMakeLists.txt  Readme.md  test_app.tpl
uf/: CMakeLists.txt  generic.h  ufAll.h  ufAssert.cpp  ufDate.cpp  ufDate.h  ufDef.C  ufDef.cpp  ufDef.h  ufFileNm.C  ufFileNm.cpp  ufFileNm.h  ufIHshT.cpp  ufIHshT.h  ufList.C  ufList.cpp  ufList.h  ufPtr.cpp  ufPtr.h  ufSHshT.cpp  ufSHshT.h  ufString.cpp  ufString.h  ufUtil.cpp
